# Tetris

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Final Report/: PROPOSAL TEMPLETE.fdb_latexmk  PROPOSAL.aux  PROPOSAL.out  PROPOSAL.tex  PROPOSAL.toc  cover page.tex  coverpage.tex
Final Report/sec/:  Conclusion and recommendations.tex   Limitations and future enhancements.tex  Application.tex  Existing System.tex  Literature Survey.tex  Problem Faced and Solutions.tex  Refrences.tex  Results.tex  abstract.tex  acknowledgement.tex  implementation.tex  introduction.tex  methodology.tex  objectives.tex  projectSchedule.tex
PROPOSAL/: PROPOSAL.aux  PROPOSAL.out  PROPOSAL.tex
PROPOSAL/sec/: Application.tex  abstract.tex  acknowledgement.tex  introduction.tex  methodology.tex  objectives.tex  projectScope.tex  proposed.tex
PROPOSAL/sec/sec/sec/sec/sec/: Application.tex
inc/: FileManager.hpp  GameOverState.hpp  GamePlayState.hpp  HighScoreState.hpp  InputManager.hpp  Intro_State.hpp  MainMenuState.hpp  Tetromino.hpp  asset_manager.hpp  game.hpp  globals.hpp  state.hpp  state_machine.hpp  tetromino.hpp
rec/: scores.txt
src/: FileManager.cpp  GameOverState.cpp  GamePlayState.cpp  HighScoreState.cpp  InputManager.cpp  Intro_State.cpp  MainMenuState.cpp  asset_manager.cpp  game.cpp  state_machine.cpp  tetromino.cpp
src/headers/: Tetromino.hpp
